[package]
name = "marketplace"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marketplace"

[features]
no-entrypoint = []
test-bpf = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = {version="0.24.2", features=["init-if-needed"]}
anchor-spl = "0.24.2"
spl-token = {version = "~3.2.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "~1.0.3", features = ["no-entrypoint"]}
mpl-token-metadata = { version="~1.2.7", features = [ "no-entrypoint" ] }
arrayref = "~0.3.6"

[dev-dependencies]
solana-program-test = "~1.9.28"